# swagger_server/models/path.py
@@ -13,7 +13,7 @@ class Path(Model):
     NOTE: This class is auto generated by the swagger code generator program.
     Do not edit the class manually.
     """
-    def __init__(self, departure_station_id: str=None, arrival_station_id: str=None, departure_time: str=None, arrival_time: str=None, travel_time: str=None, path_items: List[PathItem]=None):
+    def __init__(self, departure_station_id: str=None, arrival_station_id: str=None, departure_time: str=None, arrival_time: str=None, travel_time: str=None, raw_travel_time: int=None, path_items: List[PathItem]=None):
         """
         Path - a model defined in Swagger
 
@@ -27,6 +27,8 @@ class Path(Model):
         :type arrival_time: str
         :param travel_time: The travel_time of this Path.
         :type travel_time: str
+        :param raw_travel_time: The raw_travel_time of this Path.
+        :type raw_travel_time: int
         :param path_items: The path_items of this Path.
         :type path_items: List[PathItem]
         """
@@ -36,6 +38,7 @@ class Path(Model):
             'departure_time': str,
             'arrival_time': str,
             'travel_time': str,
+            'raw_travel_time': int,
             'path_items': List[PathItem]
         }
 
@@ -45,6 +48,7 @@ class Path(Model):
             'departure_time': 'departure_time',
             'arrival_time': 'arrival_time',
             'travel_time': 'travel_time',
+            'raw_travel_time': 'raw_travel_time',
             'path_items': 'path_items'
         }
 
@@ -53,6 +57,7 @@ class Path(Model):
         self._departure_time = departure_time
         self._arrival_time = arrival_time
         self._travel_time = travel_time
+        self._raw_travel_time = raw_travel_time
         self._path_items = path_items
 
     @classmethod
@@ -171,6 +176,27 @@ class Path(Model):
         """
 
         self._travel_time = travel_time
+
+    @property
+    def raw_travel_time(self) -> int:
+        """
+        Gets the raw_travel_time of this Path.
+
+        :return: The raw_travel_time of this Path.
+        :rtype: int
+        """
+        return self._raw_travel_time
+
+    @raw_travel_time.setter
+    def raw_travel_time(self, raw_travel_time: int):
+        """
+        Sets the raw_travel_time of this Path.
+
+        :param raw_travel_time: The raw_travel_time of this Path.
+        :type raw_travel_time: int
+        """
+
+        self._raw_travel_time = raw_travel_time
 
     @property
     def path_items(self) -> List[PathItem]:
